# soda-ftp-download

./: .gitignore  README.md  pyproject.toml
soda_ftp_download/: __init__.py  __main__.py  download_file_m.py  main.py
tests/: cli_download.py  jupyter_download.py
