[project]
name = "soda-ftp-download"
version = "2025.4.24.0"
description = "download files from FTP with progress bar and auto-resume support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/soda92/soda_ftp_download"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["soda_ftp_download"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["soda_ftp_download"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

# [tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "jupyter>=1.1.1",
]

[project.scripts]
ftp_download = "soda_ftp_download.main:main"
